--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <hr class="star-light mb-5">
         <div class="row">
           <div class="col-lg-4 ml-auto">
-            <p class="lead">北京和图海纳科技有限公司成立于2020年，我们的核心团队由来自北京大学、IBM研究院、美国上市公司的教授、高级工程师和高级产品组成。在医学、机械、电子、软件、大数据等多个学科有深入的研究和丰富的工程实践经验，在解决复 杂工程技术问题、进行工程技术创新方面有突出的成绩和能力。</p>
+            <p class="lead">北京和图海纳科技有限公司成立于2020年，我们的核心团队由来自北京大学、IBM研究院、美国上市公司的教授、高级工程师和高级产品经理组成。在医学、机械、电子、软件、大数据等多个学科有深入的研究和丰富的工程实践经验，在解决复 杂工程技术问题、进行工程技术创新方面有突出的成绩和能力。</p>
           </div>
           <div class="col-lg-4 mr-auto">
             <p class="lead">我们主要从事基于人工智能的辅助诊断和数据标注规范化研究，尤其是数据集人工假像的扰动建模和智能算法的鲁棒性研究等。研究工作包含组织和细胞形态学的辅助诊断算法、基于iPad的沉浸式数据标注软件、实时显微图像校正和辅助诊断交互系统和激光发射多模态显微成像系统。
