--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg bg-secondary fixed-top text-uppercase" id="mainNav">
       <div class="container">
-        <!-- <a class="navbar-brand js-scroll-trigger" href="#page-top">ASTER PLAY LTD.</a> -->
+        <!-- <a class="navbar-brand js-scroll-trigger" href="#page-top">Hetuvidia</a> -->
         <img class="navbar-brand" src="img/logo.png" alt=""/>
         <button class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
@@ -159,8 +159,8 @@
         <div class="row">
           <div class="col-md-4 mb-5 mb-lg-0">
             <h4 class="text-uppercase mb-4">公司地址</h4>
-            <p class="lead mb-0">北京市海淀区清华科技园 
-              <br>科技大厦C座G层CG0580</p>
+            <p class="lead mb-0">北京市海淀区中关村东路1号院8号楼 
+              <br>科健大厦二层</p>
           </div>
           <div class="col-md-4 mb-5 mb-lg-0">
             <h4 class="text-uppercase mb-4">社交网络</h4>
@@ -203,7 +203,7 @@
     <!--
     <div class="copyright py-4 text-center text-white">
       <div class="container">
-        <small>Copyright &copy; ASTER PLAY 2018</small>
+        <small>Copyright &copy; Hetuvidia 2018</small>
       </div>
       <div>
         <a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=11010802031988"><img src="img/gaba.png"/> <small>京公网安备 11010802031988号</a> | <a href="https://www.beian.miit.gov.cn">京ICP备20016693号</a></small>
